Android Screen Orientation API sample update
Signed-off-by: Mohtasim <mbellah@microsoft.com>

--- a/CommunicationCallingXamarinSampleApp/CommunicationCallingXamarinSampleApp/SettingsPage.xaml
+++ b/CommunicationCallingXamarinSampleApp/CommunicationCallingXamarinSampleApp/SettingsPage.xaml
@@ -16,6 +16,10 @@
                 <Switch x:Name="leftToRightToggle" IsToggled="true" Margin="16, 0" Toggled="OnLeftToRightToggled"/>
                 <Label Text="Language" FontSize="12" HorizontalTextAlignment="Start" Margin="16, 24, 16, 8" TextColor="#6E6E6E"/>
                 <Picker x:Name="languagePicker" Title="Select a language" TextColor="#6E6E6E"/>
+                <Label Text="CallScreenOrientation" FontSize="12" HorizontalTextAlignment="Start" Margin="16, 24, 16, 8" TextColor="#6E6E6E"/>
+                <Picker x:Name="callScreenOrientationPicker" Title="Select orientation for CallScreen" TextColor="#6E6E6E"/>
+                <Label Text="SetupScreenOrientation" FontSize="12" HorizontalTextAlignment="Start" Margin="16, 24, 16, 8" TextColor="#6E6E6E"/>
+                <Picker x:Name="setupScreenOrientationPicker" Title="Select orientation for SetupScreen" TextColor="#6E6E6E"/>
                 <Label Text="Data Model Injection" FontSize="13" HorizontalTextAlignment="Start" Margin="16, 28, 16, 8" TextColor="#6E6E6E"/>
                 <Label Text="Local Avatar" FontSize="13" HorizontalTextAlignment="Start" Margin="16, 8" TextColor="#6E6E6E"/>
                 <StackLayout Margin="20" Orientation="Horizontal" HorizontalOptions="Center">
