--- a/CommunicationCallingXamarinSampleApp/CommunicationCallingXamarinSampleApp/SettingsPage.xaml
+++ b/CommunicationCallingXamarinSampleApp/CommunicationCallingXamarinSampleApp/SettingsPage.xaml
@@ -39,6 +39,12 @@
                     <ImageButton x:Name="remoteMouseBtn" Source="mouse" WidthRequest="{OnPlatform iOS=40, Android=40}" HorizontalOptions="Center" Clicked="OnRemoteMouseAvatarClicked"/>
                     <ImageButton x:Name="remoteOctopusBtn" Source="octopus" WidthRequest="{OnPlatform iOS=40, Android=40}" HorizontalOptions="Center" Clicked="OnRemoteOctopusAvatarClicked"/>
                 </StackLayout>
+                <Label Text="Skip Setup Screen Config" FontSize="12" HorizontalTextAlignment="Start" Margin="16, 8" TextColor="#6E6E6E"/>
+                <Switch x:Name="skipSetupScreenToggle" IsToggled="false" Margin="16, 0" Toggled="OnSkipSetupToggled"/>
+                <Label Text="On Microphone On By Default" FontSize="12" HorizontalTextAlignment="Start" Margin="16, 8" TextColor="#6E6E6E"/>
+                <Switch x:Name="onMicrophoneOnToggle" IsToggled="false" Margin="16, 0" Toggled="OnMicOnToggled"/>
+                <Label Text="On Camera On By Default" FontSize="12" HorizontalTextAlignment="Start" Margin="16, 8" TextColor="#6E6E6E"/>
+                <Switch x:Name="onCameraOnToggle" IsToggled="false" Margin="16, 0" Toggled="OnCameraOnToggled"/>
                 <Button x:Name="dismissBtn" Text="Close" Margin="16, 0, 16, 0" Clicked="OnDismissButtonClicked"></Button>
             </StackLayout>
         </ScrollView>
